fixed the right gap in image of hero section for mobile devices

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-html{
-
-}
-
 body{
     margin: 0px;
     width: 100vw;
@@ -221,12 +217,12 @@ a{
     margin-inline: 10px;
 }
 
-@media (max-width :450px){
+@media (max-width :500px){
 
 
     #hero-section > div> img{
         height: auto;
-        width: 95vw;
+        width: 100vw;
     }
 
 
